--- a/client/package.json
+++ b/client/package.json
@@ -1,24 +1,19 @@
 {
   "name": "client",
-  "description": "A Vue.js project",
   "version": "1.0.0",
-  "author": "Caio Mendes <caio-mendes-@hotmail.com>",
-  "license": "MIT",
   "private": true,
+  "description": "A Vue.js project",
+  "author": "Caio Mendes <caio-mendes-@hotmail.com>",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "vue": "^2.5.11",
-    "vue-axios": "^2.1.5"
+    "vue-axios": "^2.1.5",
+    "vuetify": "^2.2.11"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -27,9 +22,19 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
+    "vuetify-loader": "^1.3.0",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
+  "license": "MIT"
 }
